--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,8 @@
     {% endif %}
 
     <div id="footer">
-          <div class="container">
+          <div class="container" style="margin-top: 25px;">
+             <hr/>
              <p style="text-align: right;">
                 &copy; 
                 <a href="http://www.mattmakai.com/">Matt Makai</a> 2013
