workin on formatting forms to create new events

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -9,6 +9,9 @@
                 <h4 class="pull-right">
                     <a href="{% url 'signout' %}">Sign Out</a>
                 </h4>
+                <h4 class="pull-right" style="margin-right: 30px;">
+                    <a href="{% url 'reactions_list' %}">Events</a>
+                </h4>
             </div>
             {% endif %}
           {% comment %}
