--- a/templates/reactions/reactionevent_form.html
+++ b/templates/reactions/reactionevent_form.html
@@ -1,15 +1,28 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container">
-        <h1>New Event</h1>
-        <form class="create-event-form" method="post" action="{% url 'create_event' %}">
-            {% csrf_token %}
-            {{ form }}
-            <div class="create-event-form-btns">
-                <a href="{% url 'dashboard' %}" class="btn btn-warning">Cancel</a>
-                <button type="submit" class="btn btn-success">Save Event</button>
-            </div>
+<div class="container">
+    <h1>New Event</h1>
+    <div class="row">
+        <div class="col-md-5">
+            <form class="create-event-form" method="post" action="{% url 'create_event' %}">
+                {% csrf_token %}
+                {% for field in form %}
+                    <p>
+                        <span style="font-size: 1.5em;">{{ field.label }}</span>
+                        <br/>
+                        {% if field.errors %}
+                            {{ field.errors }}<br/> 
+                        {% endif %}
+                        {{ field }}
+                    </p>
+                {% endfor %}
+                <div class="create-event-form-btns">
+                    <a href="{% url 'dashboard' %}" class="btn btn-warning btn-lg">Cancel</a>
+                    <button type="submit" class="btn btn-success btn-lg pull-right">Save Event</button>
+                </div>
+            </form>
         </div>
     </div>
+</div>
 {% endblock %}
