--- a/templates/base.html
+++ b/templates/base.html
@@ -31,14 +31,14 @@
     </div>
     {% endif %}
 
-    <div id="footer">
-          <div class="container" style="margin-top: 25px;">
-             <hr/>
-             <p style="text-align: right;">
-                &copy; 
-                <a href="http://www.mattmakai.com/">Matt Makai</a> 2013
-             </p>
-          </div>
+    <div id="footer" style="margin-top: 25px;">
+      <div class="container" style="margin-top: 25px;">
+         <hr/>
+         <p style="text-align: right;">
+            &copy; 
+            <a href="http://www.mattmakai.com/">Matt Makai</a> 2013
+         </p>
+      </div>
     </div>
 
     <script src="{% static 'js/jquery-1.10.2.min.js' %}" type="text/javascript"></script>
