--- a/templates/reactions/reactionevent_detail.html
+++ b/templates/reactions/reactionevent_detail.html
@@ -12,7 +12,7 @@
             from this event:</h2>
             <div class="reactions-list">
                 {% for o in object.reaction_set.all %}
-                    {{ o.message }}
+                    "{{ o.message }}" from {{ o.phone_number }}.
                 {% endfor %}
             </div>
         {% else %}
